# test

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6_thread
.github/workflows/: build.yml
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml
